err/commoncrawljob.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CommonCrawlJob-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/aws'...
Listing './lib/python3.5/site-packages/ccjob'...
Compiling './lib/python3.5/site-packages/ccjob/config.py'...
***   File "./lib/python3.5/site-packages/ccjob/config.py", line 1
    from
       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/warc'...
Compiling './lib/python3.5/site-packages/warc/gzip2.py'...
***   File "./lib/python3.5/site-packages/warc/gzip2.py", line 52
    write32u(self.fileobj, self.size & 0xffffffffL)
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/warc/warctool.py'...
***   File "./lib/python3.5/site-packages/warc/warctool.py", line 54
    print "size", len(response.content)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/warc-0.2.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
